# national-boundaries

./: .gitignore  Makefile  README.md  build.gradle.kts  config.properties  create-geopackage.sh  docker-compose.yml  package.json  settings.gradle.kts  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: 1_bug.yml  2_feature_request.yml
.github/workflows/: check-for-updates.yml  ci.yml  publish-api.yml  publish-pmtiles.yml  publish.yml
api/: .dockerignore  .gitignore  Dockerfile  README.md  constants.py  create-database.sh  database.py  docker-compose.yml  entrypoint.sh  filters.py  knexfile.ts  main.py  models.py  moleculer.config.ts  package.json  pyproject.toml  router.py  schemas.py  service.py  services.py  test_main.py  test_performance.py  workers.py
api/mixins/: database.mixin.ts
api/services/: api.service.ts  counties.service.ts  elderships.service.ts  health.service.ts  municipalities.service.ts  residentialAreas.service.ts  sentry.service.ts
api/src/: constants.py  filters.py  main.py  models.py  router.py  services.py
api/types/: constants.ts  index.ts  moleculer.ts
api/utils/: index.ts
gradle/wrapper/: gradle-wrapper.properties
preview/: tileserver-config.json
src/main/java/lt/startupgov/boundaries/: Main.java
src/main/java/lt/startupgov/boundaries/constants/: Layers.java  Source.java
src/main/java/lt/startupgov/boundaries/layers/: Counties.java  Elderships.java  Layer.java  Municipalities.java  Parcels.java  ResidentialAreas.java  Residentials.java  Streets.java
vector/docker/static/: Dockerfile
vector/docker/static/caddy/: Caddyfile
