[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Karolis Vyčius <karolis@vycius.lt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
fastapi-pagination = "^0.12.25"
sqlalchemy = "^2.0.30"
geoalchemy2 = "^0.15.1"
sentry-sdk = {extras = ["fastapi", "sqlalchemy"], version = "^2.5.1"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
